assets/css/style.css
*,
html,
body {
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
  font-size: 16px;
}

/* navbar */
.navbar {
  height: 80px;
  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 7%);
}

.nav-link {
  color: #313131;
  font-weight: 500;
  font-size: 1em;
}

.nav-item a:hover {
  background-color: #ff3333;
  color: white;
}
/* end Navbar */

/* section hero */

.hero-section .container-fluid {
  padding: 50px 0;
}

.h-caption {
  /* padding-top: 180px; */
  font-size: 2.813em;
  font-weight: 700;
}

.button-detail {
  display: inline-block;
  width: 213px;
  height: 50px;
  color: white;
  line-height: 50px;
  text-align: center;
  text-decoration: none;
  list-style: none;
  background-color: #ff3333;
}

.button-contact {
  display: inline-block;
  width: 213px;
  height: 50px;
  color: #313131;
  line-height: 42px;
  text-align: center;
  text-decoration: none;
  list-style: none;
  border: 4px solid #ff3333;
}

.button-detail:hover {
  color: white;
  font-weight: 500;
  background-color: #e22e2e;
}

.button-contact:hover {
  color: white;
  font-weight: 500;
  background-color: #ff3333;
}

.image-hero img {
  width: 536;
  height: 476px;
  background-position: center;
  background-size: cover;
  /* margin-top: 150px; */
  border-top: 5px solid #ff3333;
  border-bottom: 5px solid #182bff;
  /* border-top-right-radius: 150px; */
}

/* end Hero */

/* about */

.heading {
  font-size: 2em;
  font-weight: 700;
  text-align: center;
  padding-top: 20px;
  color: #ff3333;
}

.about-section {
  margin-bottom: 50px;
}

.image-about {
  background-image: url(/assets/images/hero-section.JPG);
  background-position: center;
  background-size: cover;
  height: 450px;
}

/* end about */

/* sejarah */
.judul {
  font-size: 1.75em;
  font-weight: 700;
}

.section-sejarah {
  padding: 0 20px;
  font-size: 20px;
  font-weight: 600;
}

.paragraph {
  font-size: 16px;
  font-weight: 300;
}

/* end Sejarah */

/* services */
.videowrapper {
  float: none;
  clear: both;
  width: 100%;
  position: relative;
  padding-bottom: 56.25%;
  padding-top: 25px;
  height: 0;
}

.videowrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.wrapper-card {
  width: 352px;
  height: 289px;
  border-radius: 0;
  box-sizing: border-box;
  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 7%);
}

.card-title {
  font-size: 1.125em;
  margin-bottom: 15px;
}

.wrapper-content {
  margin-top: 4px;
}

.card-subtitle {
  font-size: 1em;
  margin-top: 11px;
}

.card-marker {
  font-size: 0.875em;
}

.card-caption {
  font-size: 0.875em;
  margin-bottom: 0;
}

.button-card {
  display: inline-block;
  width: 309px;
  height: 40px;
  color: white;
  line-height: 40px;
  font-size: 0.875em;
  text-align: center;
  text-decoration: none;
  list-style: none;
  background-color: #ff3333;
}

.button-card:hover {
  color: white;
  font-weight: 500;
  background-color: #e22e2e;
}

#jadwal {
  margin-bottom: 80px;
}

/* end services */

/* contact us */
.contact-us {
  margin-top: 50px;
  padding: 20px;
  background-color: #ff3333;
  color: white;
}

.wrapper-maps {
  position: relative;
  width: 100%;
  overflow: hidden;
}

.responsive-maps {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
  border: none;
  margin-top: -100px;
}

.subject-contact {
  font-size: 1.125em;
}

/* end contact us */

/* footer */
#footer {
  margin-top: 170px;
  border-top: 1px solid rgba(0, 0, 0, 7%);
}

#footer a {
  text-decoration: none;
  color: black;
}

#footer .content-left {
  padding: 20px;
}

#footer .content-left p {
  font-size: 0.875em;
  margin-bottom: 0;
}

#footer .text-items {
  font-weight: 500;
}

#footer .text-title {
  font-size: 1em;
}

#footer .footer-text,
span {
  font-size: 0.875em;
}

.email a {
  text-decoration: none;
  color: white;
}

#footer .body-left a img {
  width: 30px;
  margin-right: 5px;
}

/* end footer */

